added information to metric category that included formatted links to our datasets

--- a/WorkingNotebook.ipynb
+++ b/WorkingNotebook.ipynb
@@ -4,12 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Introduction: Because Pittsburgh is always called a food city, we decided to base our metric on density of food per Allegheny county zip code. Some other options we explored included sorting dog names by neighborhood, health quality per zip code, and food quality per zip code.\n",
+    "## Introduction\n",
+    "Because Pittsburgh is always called a food city, we decided to base our metric on density of food per Allegheny county zip code. Some other options we explored included sorting dog names by neighborhood, health quality per zip code, and food quality per zip code.\n",
     "\n",
-    "Our data sets:\n",
-    "https://data.wprdc.org/dataset/allegheny-county-supermarkets-convenience-stores/resource/626357fa-c95d-465f-9a02-3121655b2b78\n",
-    "https://data.wprdc.org/dataset/allegheny-county-farmers-markets-locations\n",
-    "https://data.wprdc.org/dataset/allegheny-county-restaurant-food-facility-inspection-violations"
+    "## Metric\n",
+    "Our data sets are the following: \n",
+    "* [Allegheny County Supermarkets and Convenience Stores](https://data.wprdc.org/dataset/allegheny-county-supermarkets-convenience-stores/resource/626357fa-c95d-465f-9a02-3121655b2b78)\n",
+    "* [Allegheny County Farmers Markets](https://data.wprdc.org/dataset/allegheny-county-farmers-markets-locations)\n",
+    "* [Allegheny County Restaurant Food Facility Inspections and Locations](https://data.wprdc.org/dataset/allegheny-county-restaurant-food-facility-inspection-violations)\n",
+    "Our metric is the amount of food facilities per zip code. We chose this specifically because all three of these data sets have a zip code listing. This makes it easier to combine all three of these datasets into one, as they all have a common column.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -17,10 +30,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
-   ]
+   "source": []
   }
  ],
  "metadata": {
