expanded a bit on intro

--- a/WorkingNotebook.ipynb
+++ b/WorkingNotebook.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "Because Pittsburgh is always called a food city, we decided to base our metric on density of food per Allegheny county zip code. Some other options we explored included sorting dog names by neighborhood, health quality per zip code, and food quality per zip code.\n",
+    "Because Pittsburgh is always called a food city, we decided to base our metric on density of food per Allegheny county zip code. By \"food\", we mean places that residents can buy food, like supermarkets, convenience stores, restaurants, and farmers markets. Combined, these places will give us a good idea of how much food there actually is per zip code. Some other options we explored included sorting dog names by neighborhood, health quality per zip code, and food quality per zip code.\n",
     "\n",
     "## Metric\n",
     "Our data sets are the following: \n",
