--- a/WorkingNotebook.ipynb
+++ b/WorkingNotebook.ipynb
@@ -12,6 +12,7 @@
     "* [Allegheny County Supermarkets and Convenience Stores](https://data.wprdc.org/dataset/allegheny-county-supermarkets-convenience-stores/resource/626357fa-c95d-465f-9a02-3121655b2b78)\n",
     "* [Allegheny County Farmers Markets](https://data.wprdc.org/dataset/allegheny-county-farmers-markets-locations)\n",
     "* [Allegheny County Restaurant Food Facility Inspections and Locations](https://data.wprdc.org/dataset/allegheny-county-restaurant-food-facility-inspection-violations)\n",
+    "\n",
     "Our metric is the amount of food facilities per zip code. We chose this specifically because all three of these data sets have a zip code listing. This makes it easier to combine all three of these datasets into one, as they all have a common column.  "
    ]
   },
@@ -23,6 +24,242 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Convenience store stuff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Zip</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>223</th>\n",
+       "      <td>DiLeo's Deli</td>\n",
+       "      <td>15014.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>CR Petroleum</td>\n",
+       "      <td>15014.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126</th>\n",
+       "      <td>7 Eleven #36135</td>\n",
+       "      <td>15017.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>520</th>\n",
+       "      <td>Aldi #81</td>\n",
+       "      <td>15017.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>290</th>\n",
+       "      <td>Getgo #3641</td>\n",
+       "      <td>15017.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>549</th>\n",
+       "      <td>Giant Eagle #24</td>\n",
+       "      <td>15017.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>Co Go's #322</td>\n",
+       "      <td>15017.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>425</th>\n",
+       "      <td>South Fayette Sunoco</td>\n",
+       "      <td>15017.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>607</th>\n",
+       "      <td>Giant Eagle #641</td>\n",
+       "      <td>15017.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>297</th>\n",
+       "      <td>Gulf Gas Station - Bridgeville</td>\n",
+       "      <td>15017.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Name      Zip\n",
+       "223                    DiLeo's Deli  15014.0\n",
+       "31                     CR Petroleum  15014.0\n",
+       "126                 7 Eleven #36135  15017.0\n",
+       "520                        Aldi #81  15017.0\n",
+       "290                     Getgo #3641  15017.0\n",
+       "549                 Giant Eagle #24  15017.0\n",
+       "197                    Co Go's #322  15017.0\n",
+       "425            South Fayette Sunoco  15017.0\n",
+       "607                Giant Eagle #641  15017.0\n",
+       "297  Gulf Gas Station - Bridgeville  15017.0"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conveniencemarkets = pd.read_csv(\"data-conveniencesupermarkets.csv\")\n",
+    "conveniencemarkets.drop(['Client ID', 'Legal Name', 'Start Date', 'Street #', 'Street Name', 'State', 'Lat', 'Lon', 'Accuracy', 'Category'], axis=1, inplace=True)\n",
+    "conveniencemarkets.sort_values('Zip').head(10)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Restaurant stuff "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>facility_name</th>\n",
+       "      <th>zip</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8940</th>\n",
+       "      <td>Coco Bongos</td>\n",
+       "      <td>14530</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11251</th>\n",
+       "      <td>Patti's Pastries (XTK-7969) MFF3</td>\n",
+       "      <td>15001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11867</th>\n",
+       "      <td>The Humble Cookie Stand (XKZ-3096) MFF3</td>\n",
+       "      <td>15001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8328</th>\n",
+       "      <td>Palms Brazilian Steakhouse - Mobile</td>\n",
+       "      <td>15001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3772</th>\n",
+       "      <td>Pizza Joe's</td>\n",
+       "      <td>15003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>557</th>\n",
+       "      <td>Fair Oaks Lounge</td>\n",
+       "      <td>15003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2993</th>\n",
+       "      <td>Berkey's Tavern</td>\n",
+       "      <td>15003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5853</th>\n",
+       "      <td>The Halfway House</td>\n",
+       "      <td>15006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1377</th>\n",
+       "      <td>Bairdford United Methodist Church</td>\n",
+       "      <td>15006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7865</th>\n",
+       "      <td>St Victor Parish Activity Hall Kitchen</td>\n",
+       "      <td>15006</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 facility_name    zip\n",
+       "8940                               Coco Bongos  14530\n",
+       "11251         Patti's Pastries (XTK-7969) MFF3  15001\n",
+       "11867  The Humble Cookie Stand (XKZ-3096) MFF3  15001\n",
+       "8328       Palms Brazilian Steakhouse - Mobile  15001\n",
+       "3772                               Pizza Joe's  15003\n",
+       "557                           Fair Oaks Lounge  15003\n",
+       "2993                           Berkey's Tavern  15003\n",
+       "5853                         The Halfway House  15006\n",
+       "1377         Bairdford United Methodist Church  15006\n",
+       "7865    St Victor Parish Activity Hall Kitchen  15006"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "restaurants = pd.read_csv('GeocodedFoodFacilities.csv')\n",
+    "restaurants.drop_duplicates(subset = ['facility_name','num'], keep = 'first', inplace = True)\n",
+    "restaurants.drop(['id', 'num', 'street', 'city', 'state', 'municipal', 'category_cd', 'description', 'fdo', 'bus_st_date', 'seat_count', 'noroom', 'sq_feet', 'status', 'placard_st', 'x', 'y', 'p_code', 'address'], axis=1, inplace=True)\n",
+    "restaurants.sort_values('zip').head(10)"
    ]
   },
   {
