funky things with restaurants

--- a/WorkingNotebook.ipynb
+++ b/WorkingNotebook.ipynb
@@ -258,8 +258,12 @@
    "source": [
     "restaurants = pd.read_csv('GeocodedFoodFacilities.csv')\n",
     "restaurants.drop_duplicates(subset = ['facility_name','num'], keep = 'first', inplace = True)\n",
-    "restaurants.drop(['id', 'num', 'street', 'city', 'state', 'municipal', 'category_cd', 'description', 'fdo', 'bus_st_date', 'seat_count', 'noroom', 'sq_feet', 'status', 'placard_st', 'x', 'y', 'p_code', 'address'], axis=1, inplace=True)\n",
-    "restaurants.sort_values('zip').head(10)"
+    "\n",
+    "restaurants = restaurants.loc[restaurants['description'] != 'Chain Retail/Convenience Store']\n",
+    "restaurants = restaurants.loc[restaurants['description'] != 'Retail/Convenience Store']\n",
+    "restaurants = restaurants.loc[restaurants['description'] != 'Chain Packaged Food Only']\n",
+    "\n",
+    "restaurants.sort_values('facility_name').head(100)"
    ]
   },
   {
