data cleaning, added farmers market data

--- a/WorkingNotebook.ipynb
+++ b/WorkingNotebook.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "297  Gulf Gas Station - Bridgeville  15017.0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -183,28 +183,8 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8940</th>\n",
-       "      <td>Coco Bongos</td>\n",
-       "      <td>14530</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11251</th>\n",
-       "      <td>Patti's Pastries (XTK-7969) MFF3</td>\n",
-       "      <td>15001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11867</th>\n",
-       "      <td>The Humble Cookie Stand (XKZ-3096) MFF3</td>\n",
-       "      <td>15001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8328</th>\n",
-       "      <td>Palms Brazilian Steakhouse - Mobile</td>\n",
-       "      <td>15001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3772</th>\n",
-       "      <td>Pizza Joe's</td>\n",
+       "      <th>2993</th>\n",
+       "      <td>Berkey's Tavern</td>\n",
        "      <td>15003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -213,8 +193,8 @@
        "      <td>15003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2993</th>\n",
-       "      <td>Berkey's Tavern</td>\n",
+       "      <th>3772</th>\n",
+       "      <td>Pizza Joe's</td>\n",
        "      <td>15003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -228,29 +208,49 @@
        "      <td>15006</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>3444</th>\n",
+       "      <td>Edward's Ice Cream</td>\n",
+       "      <td>15006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>7865</th>\n",
        "      <td>St Victor Parish Activity Hall Kitchen</td>\n",
        "      <td>15006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7169</th>\n",
+       "      <td>Sweet B Sweet Shop</td>\n",
+       "      <td>15007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5318</th>\n",
+       "      <td>Mr C's Pizzeria</td>\n",
+       "      <td>15007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11109</th>\n",
+       "      <td>Big Kahuna Hot Dogs (XLE4992) MFF3</td>\n",
+       "      <td>15007</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                 facility_name    zip\n",
-       "8940                               Coco Bongos  14530\n",
-       "11251         Patti's Pastries (XTK-7969) MFF3  15001\n",
-       "11867  The Humble Cookie Stand (XKZ-3096) MFF3  15001\n",
-       "8328       Palms Brazilian Steakhouse - Mobile  15001\n",
-       "3772                               Pizza Joe's  15003\n",
-       "557                           Fair Oaks Lounge  15003\n",
-       "2993                           Berkey's Tavern  15003\n",
-       "5853                         The Halfway House  15006\n",
-       "1377         Bairdford United Methodist Church  15006\n",
-       "7865    St Victor Parish Activity Hall Kitchen  15006"
+       "                                facility_name    zip\n",
+       "2993                          Berkey's Tavern  15003\n",
+       "557                          Fair Oaks Lounge  15003\n",
+       "3772                              Pizza Joe's  15003\n",
+       "5853                        The Halfway House  15006\n",
+       "1377        Bairdford United Methodist Church  15006\n",
+       "3444                       Edward's Ice Cream  15006\n",
+       "7865   St Victor Parish Activity Hall Kitchen  15006\n",
+       "7169                       Sweet B Sweet Shop  15007\n",
+       "5318                          Mr C's Pizzeria  15007\n",
+       "11109      Big Kahuna Hot Dogs (XLE4992) MFF3  15007"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,8 +262,129 @@
     "restaurants = restaurants.loc[restaurants['description'] != 'Chain Retail/Convenience Store']\n",
     "restaurants = restaurants.loc[restaurants['description'] != 'Retail/Convenience Store']\n",
     "restaurants = restaurants.loc[restaurants['description'] != 'Chain Packaged Food Only']\n",
+    "restaurants = restaurants.loc[restaurants['municipal'] != 'Out Of County']\n",
     "\n",
-    "restaurants.sort_values('facility_name').head(100)"
+    "restaurants.drop(['id', 'num', 'street', 'city', 'state', 'municipal', 'category_cd', 'description', 'fdo', 'bus_st_date', 'p_code', 'seat_count', 'noroom', 'sq_feet', 'status', 'placard_st', 'x', 'y', 'address'], axis=1, inplace=True)\n",
+    "\n",
+    "restaurants.sort_values('zip').head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Farmers Market Stuff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Zip</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>New Sheffield Farmer's Market</td>\n",
+       "      <td>15001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>Schiefelbein Farm Stand</td>\n",
+       "      <td>15001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>McConnell's Hill Farm</td>\n",
+       "      <td>15001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Douds Floyd Farm</td>\n",
+       "      <td>15001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ambridge Farmer's Market</td>\n",
+       "      <td>15003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>Friel's Farm Market</td>\n",
+       "      <td>15005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Clairton Green Grocer</td>\n",
+       "      <td>15025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>Olde World Produce</td>\n",
+       "      <td>15025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>Jodikinos Farm Stand</td>\n",
+       "      <td>15026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>Janoski's Farm Market</td>\n",
+       "      <td>15026</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             Name    Zip\n",
+       "57  New Sheffield Farmer's Market  15001\n",
+       "64        Schiefelbein Farm Stand  15001\n",
+       "46          McConnell's Hill Farm  15001\n",
+       "18               Douds Floyd Farm  15001\n",
+       "0        Ambridge Farmer's Market  15003\n",
+       "30            Friel's Farm Market  15005\n",
+       "14          Clairton Green Grocer  15025\n",
+       "60             Olde World Produce  15025\n",
+       "39           Jodikinos Farm Stand  15026\n",
+       "38          Janoski's Farm Market  15026"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "farmersmarkets = pd.read_csv('2019_farmers-markets.csv')\n",
+    "farmersmarkets.drop(['Street_Address', 'City', 'State', 'Latitude', 'Longitude', 'Additional_Directions', 'Day_Time', 'Season', 'Affiliations'], axis=1, inplace=True)\n",
+    "\n",
+    "farmersmarkets.sort_values('Zip').head(10)"
    ]
   },
   {
