dropped decimal points in conveniencemarket dataset

--- a/WorkingNotebook.ipynb
+++ b/WorkingNotebook.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -68,77 +68,78 @@
        "    <tr>\n",
        "      <th>223</th>\n",
        "      <td>DiLeo's Deli</td>\n",
-       "      <td>15014.0</td>\n",
+       "      <td>15014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
        "      <td>CR Petroleum</td>\n",
-       "      <td>15014.0</td>\n",
+       "      <td>15014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>126</th>\n",
        "      <td>7 Eleven #36135</td>\n",
-       "      <td>15017.0</td>\n",
+       "      <td>15017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>520</th>\n",
        "      <td>Aldi #81</td>\n",
-       "      <td>15017.0</td>\n",
+       "      <td>15017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>290</th>\n",
        "      <td>Getgo #3641</td>\n",
-       "      <td>15017.0</td>\n",
+       "      <td>15017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>549</th>\n",
        "      <td>Giant Eagle #24</td>\n",
-       "      <td>15017.0</td>\n",
+       "      <td>15017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>197</th>\n",
        "      <td>Co Go's #322</td>\n",
-       "      <td>15017.0</td>\n",
+       "      <td>15017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>425</th>\n",
        "      <td>South Fayette Sunoco</td>\n",
-       "      <td>15017.0</td>\n",
+       "      <td>15017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>607</th>\n",
        "      <td>Giant Eagle #641</td>\n",
-       "      <td>15017.0</td>\n",
+       "      <td>15017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>297</th>\n",
        "      <td>Gulf Gas Station - Bridgeville</td>\n",
-       "      <td>15017.0</td>\n",
+       "      <td>15017</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                               Name      Zip\n",
-       "223                    DiLeo's Deli  15014.0\n",
-       "31                     CR Petroleum  15014.0\n",
-       "126                 7 Eleven #36135  15017.0\n",
-       "520                        Aldi #81  15017.0\n",
-       "290                     Getgo #3641  15017.0\n",
-       "549                 Giant Eagle #24  15017.0\n",
-       "197                    Co Go's #322  15017.0\n",
-       "425            South Fayette Sunoco  15017.0\n",
-       "607                Giant Eagle #641  15017.0\n",
-       "297  Gulf Gas Station - Bridgeville  15017.0"
+       "                               Name    Zip\n",
+       "223                    DiLeo's Deli  15014\n",
+       "31                     CR Petroleum  15014\n",
+       "126                 7 Eleven #36135  15017\n",
+       "520                        Aldi #81  15017\n",
+       "290                     Getgo #3641  15017\n",
+       "549                 Giant Eagle #24  15017\n",
+       "197                    Co Go's #322  15017\n",
+       "425            South Fayette Sunoco  15017\n",
+       "607                Giant Eagle #641  15017\n",
+       "297  Gulf Gas Station - Bridgeville  15017"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "pd.set_option('precision', 0)\n",
     "conveniencemarkets = pd.read_csv(\"data-conveniencesupermarkets.csv\")\n",
     "conveniencemarkets.drop(['Client ID', 'Legal Name', 'Start Date', 'Street #', 'Street Name', 'State', 'Lat', 'Lon', 'Accuracy', 'Category'], axis=1, inplace=True)\n",
     "conveniencemarkets.sort_values('Zip').head(10)\n"
