--- a/WorkingNotebook.ipynb
+++ b/WorkingNotebook.ipynb
@@ -36,16 +36,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fcb493854a8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fcb48f06358>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -65,10 +65,11 @@
    "source": [
     "conveniencemarkets = pd.read_csv(\"data-conveniencesupermarkets.csv\")\n",
     "conveniencemarkets.drop(['Client ID', 'Legal Name', 'Start Date', 'Street #', 'Street Name', 'State', 'Lat', 'Lon', 'Accuracy', 'Category'], axis=1, inplace=True)\n",
+    "conveniencemarkets.rename(columns={\"Name\": \"name\", \"Zip\": \"zip\"})\n",
     "\n",
-    "ccounts = conveniencemarkets.groupby('Zip').count()\n",
-    "ccounts = ccounts.loc[ccounts['Name'] > ccounts['Name'].max()/2]\n",
-    "ccounts.plot.bar()"
+    "ccounts = conveniencemarkets.groupby('zip').count()\n",
+    "ccounts_temp = ccounts.loc[ccounts['name'] > ccounts['name'].max()/2]\n",
+    "ccounts_temp.plot.bar()"
    ]
   },
   {
@@ -80,16 +81,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fcb491c1518>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fcb48f4f860>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -118,8 +119,8 @@
     "restaurants.drop(['id', 'num', 'street', 'city', 'state', 'municipal', 'category_cd', 'description', 'fdo', 'bus_st_date', 'p_code', 'seat_count', 'noroom', 'sq_feet', 'status', 'placard_st', 'x', 'y', 'address'], axis=1, inplace=True)\n",
     "\n",
     "rcounts = restaurants.groupby('zip').count()\n",
-    "rcounts = rcounts.loc[rcounts['facility_name'] > rcounts['facility_name'].max()/2]\n",
-    "rcounts.plot.bar()"
+    "rcounts_temp = rcounts.loc[rcounts['facility_name'] > rcounts['facility_name'].max()/2]\n",
+    "rcounts_temp.plot.bar()"
    ]
   },
   {
@@ -131,16 +132,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fcb47ad3cc0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fcb490bc438>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -162,8 +163,8 @@
     "farmersmarkets.drop(['Street_Address', 'City', 'State', 'Latitude', 'Longitude', 'Additional_Directions', 'Day_Time', 'Season', 'Affiliations'], axis=1, inplace=True)\n",
     "\n",
     "fcounts = farmersmarkets.groupby('Zip').count()\n",
-    "fcounts = fcounts.loc[fcounts['Name'] > fcounts['Name'].max()/2]\n",
-    "fcounts.plot.bar()"
+    "fcounts_temp = fcounts.loc[fcounts['Name'] > fcounts['Name'].max()/2]\n",
+    "fcounts_temp.plot.bar()"
    ]
   },
   {
