--- a/WorkingNotebook.ipynb
+++ b/WorkingNotebook.ipynb
@@ -804,7 +804,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Clearly, 15222 (Downtown and Strip District) has the largest amount of food facilities at 539, so by our metric, that makes Downtown and the Strip District the best places in Allegheny County! Following behind at 478 facilities is 15212 (Reserve Township and Millvale), and our bronze medal goes to 15213 (Oakland) with 422 facilities. All of these zip codes/neighborhoods are technically still Pittsburgh, so it is no surprise that these neighborhoods come out on top. Granted, these metrics don't take population into account -- restaurants per capita was out"
+    "Clearly, 15222 (Downtown and Strip District) has the largest amount of food facilities at 539, so by our metric, that makes Downtown and the Strip District the best places in Allegheny County! Following behind at 478 facilities is 15212 (Reserve Township and Millvale), and our bronze medal goes to 15213 (Oakland) with 422 facilities. All of these zip codes/neighborhoods are technically still Pittsburgh, so it is no surprise that these neighborhoods come out on top. Granted, these metrics don't take population into account -- restaurants per capita was out of the question because we couldn't find a data set that had what we needed, but in any case, more is always better, especially with food!"
    ]
   },
   {
@@ -819,6 +819,15 @@
    "metadata": {},
    "source": [
     "(\"Reflect on how the data driven determination of “best neighborhood” is the same or different from your personal favorite neighborhood. Each member of the group should write their own response to this\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Lindsey**:\n",
+    "\n",
+    "The data does differ from my actual favorite neighborhood/zip code, but that's mostly because of bias towards my hometown. I hail from 15025 (Jefferson Hills/Clairton) and am most familiar with the restaurants from around there. It makes sense that Downtown/Strip District won, though; it's more population-dense, for one thing, and there are a lot of good restaurants there. (add more wh"
    ]
   },
   {
